# apogee_etc

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/source/: api.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  theory.rst
examples/: basic_usage.py
python/apogee_etc/: __init__.py  calculator.py  calibration.py  config.py  models.py  observatories.py  physics.py
python/apogee_etc/data/: apo_coefficients.yaml  default_coefficients.yaml  instruments.yaml  lco_coefficients.yaml  sky_models.yaml
tests/: test_calculator.py
