[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apogee-etc"
version = "0.1.0"
description = "A hybrid empirical/theoretical exposure time calculator for APOGEE-like observations."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "David Nidever"}]
dependencies = [
    "numpy>=1.23",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
app = ["streamlit>=1.30", "pandas>=2"]
test = ["pytest>=7"]

[tool.setuptools.package-data]
apogee_etc = ["data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
